Fix map spacing

--- a/src/components/DetailedRoute/_DetailedRoute.scss
+++ b/src/components/DetailedRoute/_DetailedRoute.scss
@@ -68,7 +68,7 @@
   border-bottom: 2px solid $darkAccent;
 
   &__map-div {
-    width: 1px;
+    width: 50%;
   }
 
   &__distance {
